# yt3

./: .copconignore  .env.example  .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README.md  TESTING.md  Taskfile.yml  agr.toml  biome.json  bunfig.toml  check_missing.ts  eslint.config.mjs  lint_errors.txt  mypy.ini  package-lock.json  package.json  pulse.md  pyproject.toml  remaining_lint.txt  run_log.txt  run_log_cached.txt  test_voicevox.ts  tsc_output.txt  tsconfig.json
.agent/agents/: media-producer.md  script-writer.md  youtube-publisher.md
.agent/workflows/: cleanup.md  daily.md  destruct.md  dryrun.md  evidence_audit.md  git copy.md  git.md  improve.md  refactor.md  run.md  runbyantigravity.md  ship.md  tune.md  visual_automation.md
.claude/: CLAUDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  RESEARCH_THEME_DIVERSITY_FIX.md  TITLE_SIMILARITY_ANALYSIS.md  integration_findings.md  settings.json
.claude/agents/: architect.md  content-analyst.md  instructor.md  media-producer.md  reviewer.md  script-writer.md  youtube-director.md  youtube-publisher.md
.claude/commands/: commit.md  lint.md
.claude/rules/: architecture.md  config.md  docs.md  frontend.md  general.md  python.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: LAYERING_STRATEGY.md  MEMORY.md  model_behavior_directive.md  style_conventions.md  suggested_commands.md  task_completion.md
config/: .env.example  default.yaml  scene_prompts.yaml
config/schemas/: README.md  content_schema_v2.json  outline_schema_v2.json  research_schema_v2.json
data/ace/: audit.json  (+1 more)
docs/: MEDIA_LAYOUT.md  UNIFIED_CONCLUSIONS.md  development_manifesto_v3.md  gemini-strategy.md  modern_stack_report.md  strategy.md
memory/: curriculum.yaml  essences.yaml  index.json  index.yaml  knowledge_base.yaml  strategy.md
prompts/: content.yaml  critic.yaml  director.yaml  knowledge.yaml  memory.yaml  metadata.yaml  news.yaml  reporter.yaml  research.yaml  research_v2.yaml  script.yaml  trend.yaml
scripts/: README.md  _resize_bg.ts  ace_ops.ts  adr_new.ts  audit_overlays.ts  automation.py  automation.ts  diagnose_search.ts  discord_news_bot.py  discord_news_bot.ts  ensure_public.ts  find_edge.ts  fix_thumbnail_upload.ts  generate_thumb_20260219.ts  generate_thumb_manual.ts  harness_doctor.ts  iqa_batch_check.ts  run_workflow_cron.sh  setup_systemd.ts  start_aim.sh  sync_memory.ts  tasks.ts  test_llm.ts  test_quota_orchestration.ts  verify_polymarket_pipeline.ts  voicevox_manager.sh
src/: README.md  README_scripts.md  asset.py  asset.ts  base.ts  boj_workflow.ts  config.py  config.ts  config_types.ts  core.ts  graph.py  graph.ts  index.test.ts  index.ts  layout_engine.ts  main.py  models.py  models.ts  notebooklm_workflow.ts  pulse_to_video_workflow.ts  report_workflow.ts  responsibilities.md  state.py  state.ts  step.ts  thumbnail_renderer.ts  types.ts  utils.py  utils.ts
systemd/: yt3-aim.service  yt3-automation.service  yt3-automation.timer  yt3-discord.service  yt3-workflow.service  yt3-workflow.timer
tests/: core.test.ts  core_store.test.ts  credentials.test.ts  critic.test.ts  dashboard.test.ts  iqa_validator.test.ts  media_thumbnail_disabled.test.ts  setup.ts  step_publish.test.ts  step_research.test.ts  test_alert.ts  test_media_config.ts  test_trend_mock.py  validation.test.ts
(+231 files in other folders)
