[project]
name = "yt3"
version = "3.0.0"
description = "LangGraph-based YouTube video generator"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydantic",
    "pyyaml",
    "litellm",
    "ffmpeg-python",
    "python-dotenv",
    "pydub",
    "imageio-ffmpeg",
    "Pillow",
    "requests",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "discord.py",
    "feedgen",
    "tweepy",
    "aim",
    "torch",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "transformers",
    "huggingface-hub",
    "haystack-ai",
    "langgraph",
    "langchain-google-genai",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "types-pyyaml", "types-requests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "pydub", "pydub.*", "tweepy", "feedgen", "diffusers", "transformers",
    "langchain_google_genai", "aim", "google.auth", "google_auth_oauthlib",
    "googleapiclient", "discord",
]
ignore_missing_imports = true
